--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Build NuGet Package
       run: dotnet build --configuration Release
     - name: Publish NuGet Package to Github
-      run: dotnet nuget push ${{github.workspace}}/bin/Release/*.nupkg -s "https://nuget.pkg.github.com/roman015/index.json" -k ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet nuget push ${{github.workspace}}/bin/Release/*.nupkg -s "https://nuget.pkg.github.com/roman015/index.json" --username roman015 --password ${{ secrets.GITHUB_TOKEN }}
