--- a/RazorDutchBlitzScorecard.csproj
+++ b/RazorDutchBlitzScorecard.csproj
@@ -6,7 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>Razor Package for tracking scores in Dutch Blitz</Description>
-    <Version>0.0.0.84</Version>
+    <Version>1.0.0</Version>
+    <PackageProjectUrl>https://github.com/roman015-com/RazorDutchBlitzScorecard</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/roman015-com/RazorDutchBlitzScorecard</RepositoryUrl>
+    <PackageReleaseNotes>Updated Project Properties</PackageReleaseNotes>
   </PropertyGroup>
 
 
